--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "YOUR NAME"
+  title: "ANNABELLE PETHERBRIDGE"
   navbar:
     left:
       - text: "Home"
